message {
	required uint32 imageNum = 1;
	repeated string filename = 2;
}
message{

	required uint32 imageNum = 1;
	required string imageFolder = 2;
	repeated string imageName = 3;
	
	
	}
